# fuzzy-aho-corasick-rs

./: Cargo.toml  README.md  TODO
.github/workflows/: ci.yml  docs.yml
DOCS/: TODO
benches/: benchmark.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/building/: builder.md  patterns.md  penalties.md
book/src/concepts/: model.md  scoring.md
book/src/getting-started/: installation.md  quick-start.md
book/src/performance/: bounding.md  prefilter.md  tips.md
book/src/reference/: acknowledgements.md  internals.md
book/src/searching/: replacement.md  search.md  segmentation.md
book/src/similarity/: custom.md  floor.md  mappings.md
book/src/streaming/: replace.md  search.md
examples/: bitap_prototype.rs  replace_bench.rs  streaming.rs
src/: builder.rs  lib.rs  matches.rs  prefilter.rs  replacer.rs  segment.rs  stream.rs  structs.rs  tests.rs
