[package]
name = "fuzzy-aho-corasick"
version = "0.3.9"
edition = "2024"
license = "MIT"
description = "Aho–Corasick automaton with fuzzy matching"
repository = "https://github.com/kakserpom/fuzzy-aho-corasick-rs"
[dependencies]
unicode-segmentation = "1.12"
[dev-dependencies]
criterion = "0.8"
[[bench]]
name = "benchmark"
harness = false
