[package]
name = "fuzzy-aho-corasick"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "Aho–Corasick automaton with fuzzy matching"
repository = "https://github.com/kakserpom/fuzzy-aho-corasick-rs"
documentation = "https://kakserpom.github.io/fuzzy-aho-corasick-rs/"
keywords = ["aho-corasick", "fuzzy", "levenshtein", "string-matching", "unicode"]
categories = ["text-processing", "algorithms"]
# Keep the published crate lean: the guide sources, the paper PDF, and CI config aren't needed by
# consumers (the book is hosted, and README/docs link the PDF on GitHub).
exclude = ["/book", "/DOCS", "/.github"]
[dependencies]
unicode-segmentation = "1.13"
[dev-dependencies]
criterion = "0.8"
indicatif = "0.18"
[[bench]]
name = "benchmark"
harness = false
